add action listener after finding users and filter user